SALVIA_CHECK_BUILD_WITH_UNICODE()

INCLUDE_DIRECTORIES(
	${SALVIA_HOME_DIR}
	${SALVIA_3RD_PARTY_INCLUDES}
	${SALVIA_BOOST_HOME_DIR}
	${SALVIA_WTL_INCLUDE_PATH}
)
LINK_DIRECTORIES(
	${SALVIA_3RD_PARTY_LIBS}
	${SALVIA_BOOST_LIB_DIR}
	${SALVIA_LLVM_LIB_PATH}
	)

ADD_EXECUTABLE( Sponza
	Sponza.cpp
)

TARGET_LINK_LIBRARIES( Sponza
	EFLIB
	salviar
	salviax
	salviau
)

SALVIA_CONFIG_OUTPUT_PATHS(Sponza)
SALVIA_CREATE_VCPROJ_USERFILE(Sponza)